# genie-md-converter

./: README.md  package.json
.github/workflows/: build.yml
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/converter/: docx.rs  hwp.rs  hwpx.rs  mod.rs  pdf.rs
